<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="OrderPrice">Enter the price of your order</string>
    <string name="CustomerService">Rate the quality of service</string>
    <string name="FoodQuality">Quality of the food</string>
    <string name="button">Count Tip</string>
    <string-array name="customer_service_options">
        <item>Excellent</item>
        <item>Good</item>
        <item>Average</item>
        <item>Poor</item>
        <item>Terrible</item>
    </string-array>
    <string name="Total">Total: </string>
    <string name="TipA">Tip Amount: </string>
    <string name="Tip">Tip: </string>
    <string name="Price">Price of the order: </string>
</resources>